# trellis2.nocuda.8gb

./: .gitignore  CMakeLists.txt  README.md  README_zh.md
cmake/: bin2c.cmake
docs/: architecture.md
include/: trellis.h  trellis_ggml_layers.h  trellis_ops.h
models/pixal3d/: model.json
models/trellis2/: model.json
src/architectures/birefnet/: birefnet.c
src/architectures/dit_flow/: dit_flow.c  dit_flow_executor.c  dit_flow_executor.h  projected_dit_flow.h
src/architectures/pixal_naf/: pixal_naf.c  pixal_naf.h
src/architectures/sparse_structure_decoder/: decoder.c
src/architectures/sparse_unet_decoder/: decoder.c  executor.c
src/export/: trellis_gltf_export.c
src/io/: trellis_file_seek.h  trellis_safetensors.c  trellis_weights.c
src/mesh/: trellis_vkmesh_stubs.c
src/model/: trellis_birefnet.c  trellis_cuda_forward.cu  trellis_cuda_kernels.cu  trellis_cuda_kernels.h  trellis_dino.c  trellis_ggml_layers.c  trellis_pixal_flow.h  trellis_pixal_naf.c  trellis_pixal_naf.h  trellis_slat_flow_model.c  trellis_sparse_structure_decoder.c  trellis_sparse_unet_vae_decoder_exec.c
src/model/sparse/: trellis_pixal_naf_backend.c  trellis_pixal_naf_vulkan.inc  trellis_sparse_backend.h  trellis_sparse_cpu.c  trellis_sparse_vk.comp  trellis_sparse_vk_mat.comp  trellis_sparse_vulkan.c  trellis_sparse_vulkan_stubs.c
src/model/sparse/shaders/: c2s_count.comp  c2s_fill.comp  fill_bias.comp  linear_coop.comp  linear_mat.comp  linear_silu_mat.comp  pixal_naf_attention_project.comp  row_norm.comp  row_norm_silu.comp  rulebook_fill.comp  rulebook_hash_insert.comp  rulebook_mask_init.comp  rulebook_tile_valid.comp  rulebook_valid_sorted_scatter.comp  scan_i32_add_block_offsets.comp  scan_i32_block.comp  scan_i32_stride.comp  skip_repeat.comp  sparse_common.inc  sparse_conv_masked_mat.comp  sparse_conv_offset_coop.comp
src/ops/ggml/: ggml_layers.c
src/ops/mesh/: flex_dual_grid.c
src/ops/projected_attention/: projected_attention.c  projected_attention.h  projected_attention_cuda.cu  projected_attention_cuda_stubs.c
src/ops/projection/: pixal_projection.c  pixal_projection.h
src/ops/sampling/: flow_sampler.c
src/ops/sparse/: guides.c  trellis_pixal_naf_backend.c  trellis_pixal_naf_vulkan.inc  trellis_sparse_backend.h  trellis_sparse_cpu.c
src/ops/sparse/cuda/: forward.cu  kernels.cu  kernels.h  stubs.c
src/ops/sparse/shaders/: add.comp  c2s_gather.comp  linear_silu_coop.comp  rulebook_dispatch.comp  rulebook_valid_sorted_count.comp  silu.comp  sort_bitonic.comp  sparse_conv_masked_sorted_mat.comp  sparse_conv_offset_mat.comp  sparse_coop_common.inc  sparse_mat_common.inc
src/pipeline/: trellis_dit_flow_executor.c  trellis_dit_flow_executor.h  trellis_pipeline.c  trellis_pipeline_internal.h  trellis_pipeline_model_cache.c  trellis_pixal_condition.c  trellis_pixal_condition.h  trellis_pixal_naf_attention.c  trellis_pixal_naf_attention.h  trellis_pixal_naf_attention_cuda.cu  trellis_pixal_naf_attention_cuda_stubs.c  trellis_sparse_structure_pipeline.c  trellis_structured_latent_pipeline.c
src/runtime/: trellis_model_package.c  trellis_model_package.h  trellis_registry.c  trellis_registry.h  trellis_runtime.c
src/tasks/image_to_3d/: adapter.c  adapter.h  image_to_3d.c  image_to_3d_internal.h  model_cache.c
src/tasks/image_to_3d/adapters/: pixal3d.c  trellis2.c
src/tasks/image_to_3d/export/: gltf.c
src/weights/: safetensors.c  tensor_store.c
standalone_trellis/: run_trellis2_true_inference.py  test_ops_pytorch.py  trellis_net.c  trellis_ops.c  trellis_ops.h  trellis_ss_decoder_mesh.cpp  trellis_weight_loader.cpp  trellis_weighted_mesh.cpp
tests/: run_image_to_3d_functional.py  test_attention_policy.c  test_convert_naf_weights.py  test_ggml_backend_ops.c  test_image_to_3d_adapter.c  test_model_package.c  test_model_registry.c  test_pixal_condition.c  test_pixal_naf_attention.c  test_pixal_naf_cuda.c  test_pixal_naf_encoder.c  test_pixal_naf_vulkan.c  test_sparse_decoder_backend.c  test_trellis.c  test_verify_glb.py  test_vkmesh.c  verify_glb.py
tools/: README.md  convert_naf_weights.py  download_weights.py  package_linux_release.sh  package_windows_release.ps1  trellis_image_to_gltf.c  trellis_image_to_obj.c  trellis_tool_model.c  trellis_tool_model.h  trellis_viewer.c  trellis_win_file_dialog.c  vkmesh.c  vkmesh.comp  vkmesh_expand_edges.comp  vkmesh_mark_duplicate_faces.comp  vkmesh_sort_face_keys.comp  vkmesh_unsigned_distance.comp  win32_folder_dialog.c
tools/debug/: trellis_checkpoint_validate.c  trellis_infer.c  trellis_structured_latent.c
tools/viewers/: trellis_live.c  trellis_mesh_viewer.c  trellis_structured_latent_mesh_live_viewer.c
tools/vkmesh/: render_glb_preview.py  trellis_gltf_export.c  trellis_rebake_gltf.c  vkmesh.c
tools/vkmesh/shaders/: trellis_gltf_bake.frag  trellis_gltf_bake.vert  trellis_gltf_dilate.comp  trellis_gltf_fill_empty.comp  vkmesh_accumulate_hole_components.comp  vkmesh_apply_orientation_flips.comp  vkmesh_assign_corner_vertices.comp  vkmesh_assign_vertex_map.comp  vkmesh_boundary_degree_owner.comp  vkmesh_compact_boundary_edges.comp  vkmesh_compact_face_pairs.comp  vkmesh_compact_faces.comp  vkmesh_compact_unique_simplify_edges.comp  vkmesh_compact_vertices.comp  vkmesh_component_area.comp  vkmesh_compress_orientation_state.comp  vkmesh_compress_parents.comp  vkmesh_copy_u32.comp  vkmesh_degenerate_faces.comp  vkmesh_face_keys.comp  vkmesh_fill_u32.comp  vkmesh_init_orientation_state.comp  vkmesh_init_u32_sequence.comp  vkmesh_mark_boundary_edges.comp  vkmesh_mark_component_keep.comp  vkmesh_mark_hole_faces.comp  vkmesh_mark_hole_roots.comp  vkmesh_remap_faces.comp  vkmesh_scan_u32_stride.comp  vkmesh_seed_vertex_offsets.comp  vkmesh_simplify_best_edge.comp  vkmesh_simplify_collapse_edges.comp  vkmesh_simplify_edge_cost.comp  vkmesh_simplify_propagate_cost.comp  vkmesh_sort_edges.comp  vkmesh_union_boundary_edges.comp  vkmesh_union_corner_edges.comp  vkmesh_union_face_edges.comp  vkmesh_union_orientation_edges.comp  vkmesh_unsigned_distance.comp  (+6 more)
viewer_outputs/: trellis_viewer.pid  trellis_viewer_output.gltf
(+3 files in other folders)
